added few new features

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 <img src="images/menu_card_sweets.jpg" alt="Not Found">
                 <div>
                     <ul>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
                     </ul>
                 </div>
             </div>
@@ -89,10 +89,10 @@
                 <img src="images/menu_card_snacks.jpg" alt="Not Found">
                 <div>
                     <ul>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
                     </ul>
                 </div>
             </div>
@@ -100,10 +100,10 @@
                 <img src="images/menu_card_southIndian.jpg" alt="Not Found">
                 <div>
                     <ul>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
                     </ul>
                 </div>
             </div>
@@ -111,10 +111,10 @@
                 <img src="images/menu_card_northIndian.jpg" alt="Not Found">
                 <div>
                     <ul>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
-                        <li>Lorem ipsum dol. &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
+                        <li>Lorem ipsum dol &nbsp &nbsp Price: ₹x</li>
                     </ul>
                 </div>
             </div>
@@ -159,14 +159,6 @@
                 <option value="B">Bad</option>
                 <option value="Vb">Very Bad</option>
             </select>
-            <!-- <label for="CS3">Delivery With Care:</label> 
-            <select name="CS3" id="1">
-                <option value="E">Excellent</option>
-                <option value="Vg">Very Good</option>
-                <option value="G">Good</option>
-                <option value="B">Bad</option>
-                <option value="Vb">Very Bad</option>
-            </select> -->
             <input class="chota-box" type="submit" value="Submit">
             <input class="chota-box" type="reset" value="Reset">
         </form>   
